CON-844: stop hiding print button on IE

--- a/mips/mips-web.scss
+++ b/mips/mips-web.scss
@@ -1,6 +1,10 @@
 @import './mips-variables.scss';
 
 @mixin mips-web {
+    * {
+        font-family: 'Roboto', sans-serif;
+    }
+    
     body {
         font-family: 'Roboto', sans-serif;
     }
